<resources>
    <string name="app_name">AndroidServer</string>
    <string name="title_feeds">Feeds</string>
    <string name="title_gifts">Two</string>
    <string name="title_cart">Three</string>
    <string name="title_profile">Profile</string>
    <string name="lorem_ipsum">But I don\'t go around fire expecting not to sweat And these niggas know I lay them down, make them beg Bitches try to kick me while I\'m down, I\'ll break your leg Money outweighing problems on a triple beam I\'m sticking to the script, you niggas skipping scenes, uh</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="signin">Sign in</string>
    <string name="login_title">You know but you are acting like don\'t know..I tear the club up fo\' sho This flow is gon\' bring more dough</string>
    <string name="forgot_pass">Forgot Password?</string>
    <string name="or">OR</string>
    <string name="facebooklogin">LOGIN WITH FACEBOOK</string>
    <string name="donthaveaccnt">Don\'t have account yet?</string>
    <string name="signupnow">Sign up now</string>
    <string name="check_email">Please enter a valid email id</string>
    <string name="check_pass">Password must be atleast 8 characters</string>
    <string name="check_confirm_pass">Both password must be same</string>
    <string name="createaccnt">Create Your Account</string>
    <string name="plzsigninup">Please Sign In or Sign Up.</string>
    <string name="enteremail">Enter your email address</string>
    <string name="createpass">Create a password( 8 character min)</string>
    <string name="confirm_pass">Both password must be same</string>
    <string name="save">SAVE</string>
    <string name="already_signup">Already have account?</string>
    <string name="signinhere">Sign in here</string>

        <string name="title_activity_main">MainActivity</string>
        <string name="title_home">Home</string>
        <string name="title_dashboard">Dashboard</string>
        <string name="title_notifications">Notifications</string>

        <!-- TODO: Remove or change this placeholder text -->
        <string name="hello_blank_fragment">Hello blank fragment</string>
        <string name="taptostartpickup">Tap And Hold To start Pickup</string>
        <string name="title_activity_maps">Map</string>
        <string name="startnxtpickup">START NEXT PICKUP</string>

        <string name="email_hint">username@gmail.com</string>
        <string name="pass_hint">******</string>
        <string name="enterpass">Enter your password</string>
        <string name="login">Login</string>

        <string name="onemorestep">One More Step!</string>
        <string name="neednameandnum"><![CDATA[We Need Your Name & Number]]></string>
        <string name="fname">First name</string>
        <string name="john">John</string>
        <string name="lname">Last name</string>
        <string name="doe">Doe</string>
        <string name="address">Address</string>
        <string name="demoaddress">15 Demo Street</string>
        <string name="city">City</string>
        <string name="india">India</string>
        <string name="country">Coutry</string>
        <string name="postal_code">Postal Code</string>
        <string name="postal_hint">000000</string>
        <string name="ph_num">Phone Number (optional, but help us contact you)</string>
        <string name="num_hint">1111111111</string>

        <string name="london">London</string>
        <string name="name_blankcheck">NAME FIELD CANNOT BE EMPTY !</string>
        <string name="address_blankcheck">ADDRESS FIELD CAN\"T BE EMPTY !</string>
        <string name="city_blankcheck">CITY CAN\"T BE EMPTY !</string>
        <string name="postcode_blankcheck">POSTAL CODE CAN\'T BE EMPTY !</string>
        <string name="phno_blankcheck">PHONE NUMBER CAN\'T BE EMPTY !</string>
        <string name="phno_lengthcheck">PHONE NUMBER MUST CONTAIN ATLEAST 10 DIGITS !</string>
        <string name="signup_success">Successfully registered</string>
        <string name="enter_pass">Please enter your password</string>
        <string name="signin_success">Successfully login</string>
        <string name="somewentwrong">Something went wrong,please try again</string>
        <string name="otp_verify">OTP Verification</string>
        <string name="otpwala_txt">We will send you an </string>
        <string name="otp_full">One Time Password</string>
        <string name="otp2">on your Email</string>
        <string name="getotp">Get OTP</string>
        <string name="enter_otp">Enter the OTP sent to</string>
        <string name="norcve_otp">Don\'t receive the OTP?</string>
        <string name="resend_otp">RESEND OTP</string>
        <string name="verify_proceed"><![CDATA[VERIFY & PROCEED]]></string>
        <string name="check_otp">Please check your OTP</string>
        <string name="reset_pass_success">You have reset your password successfully</string>
        <string name="arrived">Arrived</string>
        <string name="no_booking">No Booking Found</string>
        <string name="check_internet">Please check your internet connectivity</string>
        <string name="gps_turnon">Your GPS is disabled ,please turn it on to get direction</string>
        <string name="pick_complete">Pick Up Complete</string>
        <string name="pick_not_available">Pick Up Not Available</string>
        <string name="tap_complete_pickup">Tap And Hold To Complete Pickup</string>
        <string name="edit">Edit</string>
        <string name="logout">Logout</string>
        <string name="update_profile">UPDATE PROFILE</string>
        <string name="full_name">Full Name</string>
        <string name="logout_successfully">You have been successfully logged out!</string>
        <string name="update_profile_success">Your profile have been updated successfully</string>
        <string name="check_tmmrw">Please check by tomorrow</string>
        <string name="turnongps">You need to turn on the GPS to get direction</string>
        <string name="cancel">Cancel</string>
        <string name="sel_one_item">Please choose an option</string>
        <string name="whycancel">Why are you cancelling</string>
        <string name="alltaskfortoday">This Is A List Of All Activities For Today</string>
        <string name="nointernet">Seems you are not connected to the Internet</string>
        <string name="try_again">TRY AGAIN</string>
        <string name="txtfieldblank">Text field can\'t be blank</string>
        <string name="completed_task">This task has been completed</string>
        <string name="startbeforecomplete">To start this task ,please complete running task</string>
        <string name="no_internet">No internet connection</string>
    <string name="signup">Signup</string>
    <string name="post">Post</string>
    <string name="create">Create</string>
    <string name="title">Title</string>
    <string name="poem_here">Your Text Here</string>
    <string name="notification">Notification</string>
    <string name="preview">Preview</string>
</resources>

