<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:layout_gravity="center"
    android:orientation="vertical">

    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginBottom="15dp"
        android:src="@drawable/instagram"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/login_title"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_margin="30dp"
        android:id="@+id/et_email"
        android:hint="@string/email"
        android:paddingLeft="15dp"
        android:singleLine="true"
        android:background="@drawable/rounded_edittext"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="20dp"
        android:id="@+id/et_password"
        android:hint="@string/password"
        android:paddingLeft="10dp"
        android:singleLine="true"
        android:background="@drawable/rounded_edittext"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="45dp">
        <Button
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/rounded_button"
            android:text="@string/signin"
            android:id="@+id/signin_btn"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="17sp"
            android:layout_marginLeft="30dp"/>
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:elevation="5dp"
            android:layout_gravity="center"
            android:layout_marginLeft="-50dp"
            android:src="@drawable/signin_lock"/>
    </FrameLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_marginTop="10dp"
        android:text="@string/forgot_pass"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:text="@string/or"
        />
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="45dp">
        <Button
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/rounded_button"
            android:backgroundTint="@color/blue"
            android:text="@string/facebooklogin"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="17sp"
            android:layout_marginLeft="30dp"/>
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:elevation="5dp"
            android:layout_gravity="center"
            android:layout_marginLeft="-120dp"
            android:src="@drawable/facebook" />
    </FrameLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:padding="5dp"
            android:textColor="@color/black"
            android:text="@string/donthaveaccnt"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/blue"
            android:id="@+id/signup_link"
            android:textSize="16dp"
            android:textStyle="bold"
            android:layout_marginLeft="5dp"
            android:text="@string/signupnow"/>
    </LinearLayout>
</LinearLayout>